BUG-2077 liitepyynnöt drawer should not spill outside page
BUG-2077 liitepyynnöt drawer should not spill outside page

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -638,6 +638,7 @@ and (max-width: 1000px) {
   //transform: translateX(-100%);
   min-width: 672px;
   right: 436px;
+  left: -672px;
   animation-duration: 0.5s;
 }
 
@@ -682,6 +683,7 @@ and (max-width: 1000px) {
   margin: 0px;
   font-weight: lighter;
   list-style: none;
+  overflow-wrap: break-word;
 }
 
 .application__attachment-review-row-label {
